--- a/masters_thesis/thesis.tex
+++ b/masters_thesis/thesis.tex
@@ -19,7 +19,7 @@
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage{amssymb}
-% packages for complex tables
+% packages for complex tablestj
 \usepackage{tabularx}
 % package for defining new floating environments
 \usepackage{float}
@@ -157,10 +157,10 @@
 
 % zadanie a prehlasenie
 % TODO: Comment this for the electronic version!
-\includepdf[pages=-]{blank.pdf}
-\includepdf[pages=-]{zadanie.pdf}
-\includepdf[pages=-]{blank.pdf}
-\includepdf[pages=-]{prehlasenie.pdf}
+%\includepdf[pages=-]{blank.pdf}
+%\includepdf[pages=-]{zadanie.pdf}
+%\includepdf[pages=-]{blank.pdf}
+%\includepdf[pages=-]{prehlasenie.pdf}
 
 \begin{ThesisDeclaration}
     \DeclarationText
@@ -195,7 +195,9 @@
 \MainMatter
 \tableofcontents
 
-% =========================== CHAPTER ===========================
+
+
+% === CHAPTER ==================================================================
 \chapter{Introduction}
 \label{chap:intro}
 
@@ -411,36 +413,217 @@ this project
 
 
 % === CHAPTER: Design of the Method ============================================
-\chapter{Design of the Method}
+\chapter{Extracting Program Subsets}
 \label{chap:design}
 
-- calculate data dependencies between instructions
-- compute connected components out of calculated data dependencies inside every
-function
-- compute callgraph, mapping between connected components and functions they
-are calling
-- find path from source to target in call graph
-- remove functions and other connected components that do not depend on the
-path
+% introduction
+
+In this chapter, we will introduce the method for extracting parts of programs
+from the provided input. The presented method will not randomly extract program
+parts, that would not be useful. Instead, the method determines what parts of
+the input program to extract according to the user input. Besides C source code,
+user also provides integer value that represents line of code corresponding to
+the input C source code. We will call this integer value \textbf{target}.
+Our procedure will subsequently calculate possible execution path up to the
+target that user provided and extracts this execution path into separate
+program.
+
+The whole procedure from the users perspective (including the desired result we
+want to achieve) may look like this:
+
+% next point
+\begin{myItemize}
+\item Lets say the user provided us with the input in the form of the following
+C program source code that is stored in the file \mintinline{text}{example.c}:
+
+\begin{minted}[frame=lines, framesep=10pt,linenos]{C}
+int foo(int n) {
+  int x = n + 10;
+  return x;
+}
+
+int bar(void) {
+   return 42;
+}
+
+int main(void) {
+  int some_int = 10;
+  int foo_result = foo(some_int);
+  int bar_result = bar();
+  return 0;
+}
+\end{minted}
+
+
+Since our method does not work directly with the C source code but instead
+works with the LLVM Intermediate Representation (IR), lets use clang and emit
+IR from the presented C source code in order to demonstrate our method more
+clearly:
+\footnote{
+Flag \mintinline{text}{-S} tells clang to only run preprocess and
+compilation steps, while \mintinline{text}{-emit-llvm} makes sure to use the LLVM
+representation for assembler and object files. For detailed description of
+various clang flags, visit
+\url{https://clang.llvm.org/docs/ClangCommandLineReference.html}.
+}
+
+\begin{minted}[frame=lines,framesep=10pt]{bash}
+  clang -S -emit-llvm example.c -o example.s
+\end{minted}
+
+Emitted LLVM IR is stored in the \mintinline{text}{example.s} and would
+have the following contents:
+\footnote
+{
+Strictly speaking, this is not exactly the IR code that would be emmited by the
+clang. We have stripped it out of the module info and comments to make it more
+readable. To see the unmodified \mintinline{text}{example.s}, please go to the
+\autoref{appendix:example}.
+}
+
+\begin{minted}[frame=lines,framesep=10pt]{llvm}
+define i32 @foo(i32 %n) #0 {
+entry:
+  %n.addr = alloca i32, align 4
+  %x = alloca i32, align 4
+  store i32 %n, i32* %n.addr, align 4
+  %0 = load i32, i32* %n.addr, align 4
+  %add = add nsw i32 %0, 10
+  store i32 %add, i32* %x, align 4
+  %1 = load i32, i32* %x, align 4
+  ret i32 %1
+}
+
+define i32 @bar() #0 {
+entry:
+  ret i32 42
+}
+
+define i32 @main() #0 {
+entry:
+  %retval = alloca i32, align 4
+  %some_int = alloca i32, align 4
+  %foo_result = alloca i32, align 4
+  %bar_result = alloca i32, align 4
+  store i32 0, i32* %retval, align 4
+  store i32 10, i32* %some_int, align 4
+  %0 = load i32, i32* %some_int, align 4
+  %call = call i32 @foo(i32 %0)
+  store i32 %call, i32* %foo_result, align 4
+  %call1 = call i32 @bar()
+  store i32 %call1, i32* %bar_result, align 4
+  ret i32 0
+}
+\end{minted}
+\end{myItemize}
+
+% next point
+\begin{myItemize}
+\item User also provided the line number 2 as the target, which corresponds to
+the following C code:
+
+\begin{minted}[frame=lines,framesep=10pt]{C}
+  int x = n + 10;
+\end{minted}
+
+which in turn, corresponds to the following IR:
+
+\begin{minted}[frame=lines,framesep=10pt]{llvm}
+  %0 = load i32, i32* %n.addr, align 4
+  %add = add nsw i32 %0, 10
+  store i32 %add, i32* %x, align 4
+\end{minted}
+
+Method for finding mapping between C code and its equivalent IR instructions
+will be described in the \autoref{chap:implementation}.
+\end{myItemize}
+
+% next point
+\begin{myItemize}
+\item Now, we can take our method, apply it on the contents of the
+\mintinline{text}{example.s} and get the following result:
+
+\begin{minted}[frame=lines,framesep=10pt]{llvm}
+define i32 @foo(i32 %n) #0 {
+entry:
+  %n.addr = alloca i32, align 4
+  %x = alloca i32, align 4
+  store i32 %n, i32* %n.addr, align 4
+  %0 = load i32, i32* %n.addr, align 4
+  %add = add nsw i32 %0, 10
+  store i32 %add, i32* %x, align 4
+  %1 = load i32, i32* %x, align 4
+  ret i32 %1
+}
+
+define i32 @main() #0 {
+entry:
+  %some_int = alloca i32, align 4
+  %foo_result = alloca i32, align 4
+  store i32 10, i32* %some_int, align 4
+  %0 = load i32, i32* %some_int, align 4
+  %call = call i32 @foo(i32 %0)
+  store i32 %call, i32* %foo_result, align 4
+  ret i32 0
+}
+\end{minted}
+
+As we can see, since execution path from the program entry in the
+\mintinline{text}{main} function (which we will call \textbf{source}) to the
+\textbf{target} does not include function \mintinline{text}{bar} and its
+associated instructions, hence they got removed.
+\end{myItemize}
+
+
+\bigskip
+% next stuff
+Barring implementation specific details (which will be discussed in the
+\autoref{chap:implementation}), the method for achieving presented result can be
+summarized in the following five steps:
+
+\begin{myEnumerate}
+\item Compute data dependencies between instructions.
+\item Find connected components in the computed data dependencies inside
+every function.
+\item Construct call graph, mapping between connected components and functions
+they are calling.
+\item Find path from source to target in the call graph.
+\item Remove functions and connected components that do not depend on the
+path.
+\end{myEnumerate}
+
+We will describe in detail each step in the remaining sections of the current
+chapter.
 
 % === SECTION ===
-\section{Calculating Data Dependencies}
+\section{Computing Data Dependencies}
 \label{sec:design-dep}
 
-In order to identify what parts of the IR we need to remove, we need to compute
-dependencies between instructions.
+% motivation
+In order to identify what parts of the IR we can afford to remove, it is
+imperative to compute dependencies between instructions. We cannot haphazardly
+start removing functions left and right because we may remove some instruction
+that would be later needed by another instruction.
+This unwise action, may in effect produce inconsistent state, which might leave
+IR in the unwanted state or even state that would later fail to recompile back
+into the executable.
 
-We recognize two types of dependencies between IR instructions: control and
-data. Terminology comes from the Mareks work.
+% definitions
+We recognize two types of dependencies between IR instructions:
 
-- control dependence: "Control dependence explicitly states what nodes are
+\begin{myItemize}
+\item \textbf{Control dependence}. "Control dependence explicitly states what nodes are
 controlled by which predicate."
-
-- data dependence: "A data dependence edge is between nodes n and m iff n
+\item \textbf{Data dependence}. "A data dependence edge is between nodes n and m iff n
 defines a variable that m uses and there is no intervening definition of that
 variable on some path between n and m. In other words, the definitions from n
-reach uses in m"
+reach uses in m."
+\end{myItemize}
 
+The terminology and algorithms for computing dependencies come from the
+master's thesis of Marek Chalupa \textit{Slicing of LLVM Bitcode} \cite{dg}.
+
+% method
 The crucial information comes from data dependencies. We need to make sure that
 the IR integrity will remain intact after we are done with our transformation.
 We have to know which instructions depend which. We cannot afford to remove
@@ -492,7 +675,7 @@ We need to make sure we do not corrupt IR with undefined variables.
 
 
 % === SECTION ===
-\section{Finding Connected Components Between Data Dependencies}
+\section{Finding Connected Components}
 \label{sec:design-components}
 
 % References% TODO: put definition of connected component somewhere
@@ -533,7 +716,7 @@ Graph G would look like (in the adjacency list form):
 
 \begin{minted}[ framesep=2mm,
                 autogobble,
-                frame=lines]{llvm}
+                frame=lines]{text}
 [%tmp = alloca i32, align 4] -> [store i32 1, i32* %tmp, align 4]
 [%call = call i32 (i8*, ...) @printf(i8* ...)] -> []
 [store i32 1, i32* %tmp, align 4] -> [%0 = load i32, i32* %tmp, align 4]
@@ -545,7 +728,7 @@ Now, we can find connected components in G easily by traversing graph using BFS.
 
 \begin{minted}[ framesep=2mm,
                 autogobble,
-                frame=lines]{llvm}
+                frame=lines]{text}
 FUNCTION: z
 - COMPONENT:
     %tmp = alloca i32, align 4
@@ -737,7 +920,7 @@ stages (see chapter "removing unneeded stuff").
 
 
 % === SECTION ===
-\section{Removing Unneeded Stuff}
+\section{Removing Dead Instructions and Functions}
 \label{sec:design-removing}
 
 % TODO: some stuff in here should be in implementation rationale behind removing stuff & why we need it
@@ -826,12 +1009,13 @@ before and after call graphs
 % what could be improved technically? (e.g. better json dump)
 
 
-% ===== BIBLIOGRAPHY ===========================================================
+% === BIBLIOGRAPHY =============================================================
 \appendix
 
 % print complete bibliography
 \printbibliography
 
+% === CHAPTER ==================================================================
 \chapter{Archive structure}
 \label{appendix:archive}
 
@@ -839,5 +1023,136 @@ Content of the attached archive:
 
 TBA TBA TBA
 
+% === REMOVE THIS BEFORE PRINTING ==============================================
+\chapter{Outline}
+
+Extracting Parts of Programs into Separate Binaries
+
+\begin{myEnumerate}
+\item Get acquainted with means of the compilation of C programs using the LLVM
+compiler infrastructure - clang, LLVM Internal Representation, AST, LLVM
+optimizations.
+\item Propose a solution to statically transplant a subset of a C program. This
+subset should be extracted from the original program and synthesized as an
+independent binary.
+\item Design and implement the proposed solution in a tool having an
+appropriate form (a standalone application or an LLVM plugin).
+\item Test the implemented tool on at least 2 real-world open-source C
+programs.
+\end{myEnumerate}
+
+\noindent\rule{\textwidth}{1pt}
+
+\begin{myItemize}
+
+\item Introdution
+    \begin{myItemize}
+    \item Give introduction to wider context
+    \item Clearly explain aim of the thesis
+    \item Give outline of the following chapters
+    \end{myItemize}
+
+\item The LLVM Compiler Infrastructure
+    \begin{myItemize}
+    \item IR
+    \item Optimizations
+    \item clang
+    \end{myItemize}
+
+\item Extracting Program Subsets
+    \begin{myItemize}
+    \item Intro
+    \item
+    \item Computing Data Dependencies
+    \item Finding Connected Components
+    \item Constructing Call Graph
+    \item Finding Path
+    \item Removing Unnecessary Parts
+    \end{myItemize}
+
+\item Implementation
+    \begin{myItemize}
+    \item APEX
+    \item APEXPass
+    \item Input Source Code
+    \item Parsing User Input (Locating Target Instructions)
+    \item Computing Dependencies using dg
+    \item Extracting Target Data (Injecting Exit and Extraction)
+        \begin{myItemize}
+        \item Stripping debug symbols
+        \end{myItemize}
+    \end{myItemize}
+
+\item Experiments
+    \begin{myItemize}
+    \item Experiment 1
+    \item Experiment 2
+    \item Experiment 3
+    \end{myItemize}
+
+\item Conclusion
+    \begin{myItemize}
+    \item Show our contribution to the problem
+    \item Show wider image in context to this thesis
+    \end{myItemize}
+
+\end{myItemize}
+
+
+
+% === CHAPTER ==================================================================
+\chapter{\mintinline{text}{example.s}}
+\label{appendix:example}
+
+\begin{minted}[frame=lines, framesep=10pt, breaklines]{llvm}
+; ModuleID = 'example.c'
+source_filename = "example.c"
+target datalayout = "e-m:e-i64:64-f80:128-n8:16:32:64-S128"
+target triple = "x86_64-unknown-linux-gnu"
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @foo(i32 %n) #0 {
+entry:
+  %n.addr = alloca i32, align 4
+  %x = alloca i32, align 4
+  store i32 %n, i32* %n.addr, align 4
+  %0 = load i32, i32* %n.addr, align 4
+  %add = add nsw i32 %0, 10
+  store i32 %add, i32* %x, align 4
+  %1 = load i32, i32* %x, align 4
+  ret i32 %1
+}
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @bar() #0 {
+entry:
+  ret i32 42
+}
+
+; Function Attrs: noinline nounwind optnone uwtable
+define i32 @main() #0 {
+entry:
+  %retval = alloca i32, align 4
+  %some_int = alloca i32, align 4
+  %foo_result = alloca i32, align 4
+  %bar_result = alloca i32, align 4
+  store i32 0, i32* %retval, align 4
+  store i32 10, i32* %some_int, align 4
+  %0 = load i32, i32* %some_int, align 4
+  %call = call i32 @foo(i32 %0)
+  store i32 %call, i32* %foo_result, align 4
+  %call1 = call i32 @bar()
+  store i32 %call1, i32* %bar_result, align 4
+  ret i32 0
+}
+
+attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "less-precise-fpmad"="false" "no-frame-pointer-elim"="true" "no-frame-pointer-elim-non-leaf" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
+
+!llvm.module.flags = !{!0}
+!llvm.ident = !{!1}
+
+!0 = !{i32 1, !"wchar_size", i32 4}
+!1 = !{!"clang version 5.0.1 (tags/RELEASE_500/final)"}
+\end{minted}
 
 \end{document}
