--- a/masters_thesis/thesis.bib
+++ b/masters_thesis/thesis.bib
@@ -10,6 +10,22 @@
     URL = "Available from WWW <https://is.muni.cz/th/vik1f/>",
 }
 
+@book{clrs,
+ author = {{C}ormen, Thomas H. and {L}eiserson, Charles E. and {R}ivest, Ronald L. and {S}tein, Clifford},
+ title = {Introduction to Algorithms, Third Edition},
+ year = {2009},
+ isbn = {0262033844, 9780262033848},
+ edition = {3rd},
+ publisher = {The MIT Press},
+}
+
+@book{data_flow,
+  title={Data flow analysis: theory and practice},
+  author={Sanyal, Amitabha and Sathe, Bageshri and Khedker, Uday},
+  year={2009},
+  publisher={CRC Press}
+}
+
 @online{llvm,
     author={LLVM},
     title="{The LLVM Compiler Infrastructure}",
